# shRNAI

./: .cursorignore  .gitignore  README.md  pyproject.toml
shRNAI/: __init__.py  inference.py  module_simple.py
